# civdata

./: .gitignore  README.md  pyproject.toml
src/civdata/: __init__.py  cli.py
