[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civdata"
version = "0.1.0"
description = "Query US environmental compliance data from the terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24",
]

[project.scripts]
civdata = "civdata.cli:main"

[project.urls]
Homepage = "https://civdata.dev"
Repository = "https://github.com/CivData/civdata"
